--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,18 @@
   flex-direction: column;
   gap: 24px;
 }
+.card_wrapper {
+  display: flex;
+  gap: 16px;
+  text-align: left;
+}
 .card {
   padding: 2em;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+}
+.card--description {
+  margin-top: 8px;
 }
 
 .read-the-docs {
